force-app/main/default/objects/Event__c/fields/VG_Date_of_event__c.field-meta.xml
<CustomField>
    <fullName>VG_Date_of_event__c</fullName>
    <label>Date of event</label>
    <type>Date</type>
</CustomField>