force-app/main/default/objects/Event__c/fields/VG_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Launch</fullName>
            </value>
            <value>
                <fullName>Future Launch</fullName>
            </value>
            <value>
                <fullName>Launch Failure (Launcher)</fullName>
            </value>
            <value>
                <fullName>Launch Failure (Satellite)</fullName>
            </value>
            <value>
                <fullName>Launch Success</fullName>
            </value>
            <value>
                <fullName>Deorbit Failure</fullName>
            </value>
            <value>
                <fullName>Deorbit Success</fullName>
            </value>
            <value>
                <fullName>Docking Failure</fullName>
            </value>
            <value>
                <fullName>Docking Success</fullName>
            </value>
            <value>
                <fullName>Landing Failure</fullName>
            </value>
            <value>
                <fullName>Landing Success</fullName>
            </value>
            <value>
                <fullName>In-Orbit event</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>