force-app/main/default/objects/Event__c/fields/VG_Launcher__c.field-meta.xml
<CustomField>
    <fullName>VG_Launcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launcher</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>