force-app/main/default/objects/Event__c/fields/VG_Launcher_Satellite__c.field-meta.xml
<CustomField>
    <fullName>VG_Launcher_Satellite__c</fullName>
    <label>Launcher /Satellite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>launcher</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
                <default>true</default>
                <label>Satellite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>