force-app/main/default/objects/Event__c/fields/VG_Local_Impact__c.field-meta.xml
<CustomField>
    <fullName>VG_Local_Impact__c</fullName>
    <label>Local Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permament loss of function</fullName>
                <default>true</default>
                <label>Permament loss of function</label>
            </value>
            <value>
                <fullName>Permannt functional reduction</fullName>
            </value>
            <value>
                <fullName>Temporay loss of function</fullName>
            </value>
            <value>
                <fullName>Permenently intermittency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>