force-app/main/default/objects/Event__c/fields/VG_Loss_of_margin__c.field-meta.xml
<CustomField>
    <fullName>VG_Loss_of_margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss of margin</label>
    <type>Checkbox</type>
</CustomField>