force-app/main/default/objects/Event__c/fields/VG_Loss_of_redundancy__c.field-meta.xml
<CustomField>
    <fullName>VG_Loss_of_redundancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss of redundancy</label>
    <type>Checkbox</type>
</CustomField>