force-app/main/default/objects/Event__c/fields/VG_Next_loss__c.field-meta.xml
<CustomField>
    <fullName>VG_Next_loss__c</fullName>
    <label>Next loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>