force-app/main/default/objects/Event__c/fields/VG_Observed_cause__c.field-meta.xml
<CustomField>
    <fullName>VG_Observed_cause__c</fullName>
    <label>Observed cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Circuit</fullName>
            </value>
            <value>
                <fullName>Wear-out</fullName>
            </value>
            <value>
                <fullName>Structural Failure</fullName>
                <default>true</default>
                <label>Structural Failure</label>
            </value>
            <value>
                <fullName>Thermal runaway</fullName>
            </value>
            <value>
                <fullName>Overconsumption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>