force-app/main/default/objects/Event__c/fields/VG_Origin_system_of_event__c.field-meta.xml
<CustomField>
    <fullName>VG_Origin_system_of_event__c</fullName>
    <label>Origin (system) of event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Solar Array</fullName>
            </value>
            <value>
                <fullName>GaAs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>