force-app/main/default/objects/Event__c/fields/VG_Root_cause_of_event__c.field-meta.xml
<CustomField>
    <fullName>VG_Root_cause_of_event__c</fullName>
    <label>Root cause of event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radiation - SELU/GR</fullName>
            </value>
            <value>
                <fullName>Radiation - SEU</fullName>
            </value>
            <value>
                <fullName>Workmanship</fullName>
                <default>true</default>
                <label>Workmanship</label>
            </value>
            <value>
                <fullName>Design error</fullName>
            </value>
            <value>
                <fullName>Random component failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>