force-app/main/default/objects/Event__c/fields/VG_System_Impact__c.field-meta.xml
<CustomField>
    <fullName>VG_System_Impact__c</fullName>
    <label>System Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss of Power</fullName>
                <default>true</default>
                <label>Loss of Power</label>
            </value>
            <value>
                <fullName>Loss of Lifetime</fullName>
            </value>
            <value>
                <fullName>Loss of Function</fullName>
            </value>
            <value>
                <fullName>Loss of TM</fullName>
            </value>
            <value>
                <fullName>Loss of Pointing</fullName>
            </value>
            <value>
                <fullName>Loss of Thermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>